--- a/haskell/package.yaml
+++ b/haskell/package.yaml
@@ -1,6 +1,6 @@
 # TODO: Replace `my-project` everywhere in this file with your project name.
 name:                currycoin
-version:             0.1.0.0
+version:             0.1.0.1
 
 dependencies:
 - base
@@ -8,10 +8,16 @@ dependencies:
 - bytestring
 - secp256k1-haskell
 - base58-bytestring
+- base16
 - entropy
+- random
 - mtl
 - haskeline
 - utf8-string
+- containers
+- ppad-ripemd160
+- base58-bytestring
+
 library:
   source-dirs: src
 
