--- a/haskell/package.yaml
+++ b/haskell/package.yaml
@@ -5,6 +5,7 @@ dependencies:
 - base
 - cryptohash-sha256
 - bytestring
+- bytestring-conversion
 - secp256k1-haskell
 - base58-bytestring
 - base16
